[tool.poetry]
name = "jup"
version = "0.1.0"
description = ""
authors = ["Peyton Walters <pawalt@hey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
einops = "^0.6.1"
sentencepiece = "^0.1.99"
torch = "^2.0.1"
transformers = "^4.29.2"
accelerate = "^0.19.0"
xformers = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
